--- a/log.1
+++ b/log.1
@@ -1,18 +1,23 @@
-[INFO|3:58:26]: Started loading resources. 
-[FINE|3:58:26]: Sprite Ship loaded. 
-[FINE|3:58:26]: Sprite ShipDestroyed loaded. 
-[FINE|3:58:26]: Sprite Bullet loaded. 
-[FINE|3:58:26]: Sprite EnemyBullet loaded. 
-[FINE|3:58:26]: Sprite EnemyShipA1 loaded. 
-[FINE|3:58:26]: Sprite EnemyShipA2 loaded. 
-[FINE|3:58:26]: Sprite EnemyShipB1 loaded. 
-[FINE|3:58:26]: Sprite EnemyShipB2 loaded. 
-[FINE|3:58:26]: Sprite EnemyShipC1 loaded. 
-[FINE|3:58:26]: Sprite EnemyShipC2 loaded. 
-[FINE|3:58:26]: Sprite EnemyShipSpecial loaded. 
-[FINE|3:58:26]: Sprite Explosion loaded. 
-[INFO|3:58:26]: Finished loading the sprites. 
-[INFO|3:58:26]: 0 
-[INFO|3:58:26]: Finished loading the fonts. 
-[INFO|3:58:26]: Starting 448x520 title screen at 60 fps. 
-[INFO|3:58:28]: Closing title screen. 
+[INFO|1:17:41]: Started loading resources. 
+[FINE|1:17:41]: Sprite Ship loaded. 
+[FINE|1:17:41]: Sprite ShipDestroyed loaded. 
+[FINE|1:17:41]: Sprite Bullet loaded. 
+[FINE|1:17:41]: Sprite EnemyBullet loaded. 
+[FINE|1:17:41]: Sprite EnemyShipA1 loaded. 
+[FINE|1:17:41]: Sprite EnemyShipA2 loaded. 
+[FINE|1:17:41]: Sprite EnemyShipB1 loaded. 
+[FINE|1:17:41]: Sprite EnemyShipB2 loaded. 
+[FINE|1:17:41]: Sprite EnemyShipC1 loaded. 
+[FINE|1:17:41]: Sprite EnemyShipC2 loaded. 
+[FINE|1:17:41]: Sprite EnemyShipSpecial loaded. 
+[FINE|1:17:41]: Sprite Explosion loaded. 
+[FINE|1:17:41]: Sprite Item loaded. 
+[INFO|1:17:41]: Finished loading the sprites. 
+[INFO|1:17:42]: Finished loading the fonts. 
+[INFO|1:17:42]: Starting 448x520 title screen at 60 fps. 
+[INFO|1:17:43]: Closing title screen. 
+[INFO|1:17:43]: Starting 448x520 game screen at 60 fps. 
+[INFO|1:17:43]: Initializing 5x4 ship formation in (20,100) 
+[INFO|1:17:59]: A special ship appears 
+[INFO|1:18:03]: The special ship has escaped 
+[INFO|1:18:12]: A special ship appears 
