Fix Conflit in PracticeScreen

--- a/log.1
+++ b/log.1
@@ -1,19 +1,30 @@
-[INFO|2:17:25]: Started loading resources. 
-[FINE|2:17:25]: Sprite Ship loaded. 
-[FINE|2:17:25]: Sprite ShipDestroyed loaded. 
-[FINE|2:17:25]: Sprite Bullet loaded. 
-[FINE|2:17:25]: Sprite EnemyBullet loaded. 
-[FINE|2:17:25]: Sprite EnemyShipA1 loaded. 
-[FINE|2:17:25]: Sprite EnemyShipA2 loaded. 
-[FINE|2:17:25]: Sprite EnemyShipB1 loaded. 
-[FINE|2:17:25]: Sprite EnemyShipB2 loaded. 
-[FINE|2:17:25]: Sprite EnemyShipC1 loaded. 
-[FINE|2:17:25]: Sprite EnemyShipC2 loaded. 
-[FINE|2:17:25]: Sprite EnemyShipSpecial loaded. 
-[FINE|2:17:25]: Sprite Explosion loaded. 
-[FINE|2:17:25]: Sprite Item loaded. 
-[INFO|2:17:25]: Finished loading the sprites. 
-[INFO|2:17:25]: Finished loading the fonts. 
-[INFO|2:17:25]: Starting 448x520 title screen at 60 fps. 
-[INFO|2:17:29]: Closing title screen. 
-[INFO|2:17:29]: Select your difficulty 1 is easy, 2 is normal, 3 is hard 
+[INFO|4:18:14]: Started loading resources. 
+[FINE|4:18:14]: Sprite Ship loaded. 
+[FINE|4:18:14]: Sprite ShipDestroyed loaded. 
+[FINE|4:18:14]: Sprite Bullet loaded. 
+[FINE|4:18:14]: Sprite EnemyBullet loaded. 
+[FINE|4:18:14]: Sprite EnemyBulletN loaded. 
+[FINE|4:18:14]: Sprite EnemyBulletH loaded. 
+[FINE|4:18:14]: Sprite EnemyShipA1 loaded. 
+[FINE|4:18:14]: Sprite EnemyShipA2 loaded. 
+[FINE|4:18:14]: Sprite EnemyShipB1 loaded. 
+[FINE|4:18:14]: Sprite EnemyShipB2 loaded. 
+[FINE|4:18:14]: Sprite EnemyShipC1 loaded. 
+[FINE|4:18:14]: Sprite EnemyShipC2 loaded. 
+[FINE|4:18:14]: Sprite EnemyShipSpecial loaded. 
+[FINE|4:18:14]: Sprite Explosion loaded. 
+[FINE|4:18:14]: Sprite Item loaded. 
+[INFO|4:18:14]: Finished loading the sprites. 
+[INFO|4:18:14]: Finished loading the fonts. 
+[INFO|4:18:14]: Starting 448x520 title screen at 60 fps. 
+[INFO|4:18:15]: Closing title screen. 
+[INFO|4:18:15]: Select your difficulty 0 is practice, 1 is easy, 2 is normal, 3 is hard 
+[INFO|4:18:17]: Starting 448x520 game screen at 60 fps. 
+[INFO|4:18:17]: Initializing 5x4 ship formation in (20,100) 
+[INFO|4:18:49]: A special ship appears 
+[INFO|4:18:52]: Hit on player ship, But player is invincibility 
+[INFO|4:18:56]: The special ship has escaped 
+[INFO|4:19:03]: Hit on player ship, But player is invincibility 
+[INFO|4:19:08]: Formation now moving left 6 
+[INFO|4:19:24]: A special ship appears 
+[INFO|4:19:31]: The special ship has escaped 
